--- a/templates/reverseproxy.conf.j2
+++ b/templates/reverseproxy.conf.j2
@@ -109,13 +109,25 @@ server {
       proxy_set_header X-Forwarded-Ssl on;
       client_max_body_size {{ item.value.client_max_body_size | default('50M') }};
       proxy_read_timeout {{ item.value.proxy_read_timeout | default('300') }};
+{% if item.value.header_upgrade_connection | default(true) %}
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
+{% endif %}
+{% if item.value.header_host | default(true) %}
       proxy_set_header Host $http_host;
+{% endif %}
+{% if item.value.header_real_ip | default(true) %}
       proxy_set_header X-Real-IP $remote_addr;
+{% endif %}
+{% if item.value.header_forwarded_for | default(true) %}
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+{% endif %}
+{% if item.value.header_forwarded_proto | default(true) %}
       proxy_set_header X-Forwarded-Proto $scheme;
+{% endif %}
+{% if item.value.header_same_origin | default(true) %}
       proxy_set_header X-Frame-Options SAMEORIGIN;
+{% endif %}
       proxy_pass {{ item.value.backend_protocol | default('http') }}://{{ item.key }}_backend;
 {% if item.value.auth is defined %}
       auth_basic "Restricted Content";
