--- a/templates/reverseproxy.conf.j2
+++ b/templates/reverseproxy.conf.j2
@@ -62,6 +62,13 @@ server {
 }
 {% endif %}
 
+{% if item.value.header_upgrade_connection | default(true) %}
+map $http_upgrade $connection_upgrade {
+    default Upgrade;
+    ''      close;
+}
+{% endif %}
+
 server {
 {% if not item.value.ssl %}
    listen         {{ item.value.listen | default(80) }};
@@ -116,8 +123,9 @@ server {
       client_max_body_size {{ item.value.client_max_body_size | default('50M') }};
       proxy_read_timeout {{ item.value.proxy_read_timeout | default('300') }};
 {% if item.value.header_upgrade_connection | default(true) %}
+      proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
+      proxy_set_header Connection $connection_upgrade;
 {% endif %}
 {% if item.value.header_host | default(true) %}
       proxy_set_header Host $http_host;
